--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Global Social Protest Data</title>
     <meta
       name="description"
-      content="The web's most popular Jamstack React template"
+      content="Global Social Protest Project Data Analytics"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -15,8 +15,8 @@
     <meta property="og:image" content="" />
     <meta name="theme-color" content="#fafafa" />
 
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="icon" href="/logo20.png" sizes="any" />
+    <link rel="apple-touch-icon" href="/logo20.png" />
 
     <link rel="manifest" href="/site.manifest" />
 
